@@ -1,3 +1,5 @@
+Set to 3 hours default token expiration time in docker
+
 1.4.7
 
 Add nagios user to black list
